docs(website): first part of the web testing tutorial

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -14,3 +14,12 @@ Key points:
 - **Actors** represent _users_ and _external systems_ interacting with the system under test
 
 <ArticleComingSoon />
+
+> “To communicate effectively, the code must be based on the same language used to write the requirements—the same language that the developers speak with each other and with domain experts.”
+> ― Eric Evans @ericevans0, Domain-Driven Design
+
+
+From the software design perspective, Serenity/JS _tasks_ are conceptually similar to _procedures_, so _functions_ that don't return a value.
+Tasks encapsulate a business-focused sequence of operations that an end-user of our system, or an external system interacting with our system,
+would perform to achieve some business outcome. Examples of such tasks include one to `signUp`, `remindPassword`, `findProductByName`, and so on.
+
