--- a/documentation/serenity-js.org/docs/getting-started.mdx
+++ b/documentation/serenity-js.org/docs/getting-started.mdx
@@ -66,15 +66,23 @@ If you don't have a GitHub.com account yet, you can [sign up now](https://github
 
 ## Your feedback matters!
 
-Do you find Serenity/JS useful? Give it a ⭐ star on GitHub and rate it on Openbase!
+Do you find Serenity/JS useful? [Give it a ⭐ star on GitHub](https://github.com/serenity-js/serenity-js) and tell your friends about the framework!
 
 [![GitHub stars](https://img.shields.io/github/stars/serenity-js/serenity-js)](https://github.com/serenity-js/serenity-js) [![Rate on Openbase](https://badges.openbase.io/js/rating/@serenity-js/core.svg)](https://openbase.io/js/@serenity-js/core?utm_source=embedded&utm_medium=badge&utm_campaign=rate-badge)
 
-Found a bug? Need a feature? Raise [an issue](https://github.com/serenity-js/serenity-js/issues?state=open) or [submit a pull request](/contributing).
+Found a bug? Need a feature? Raise an [issue](https://github.com/serenity-js/serenity-js/issues?state=open) or [submit a pull request](/contributing) on [GitHub](https://github.com/serenity-js/serenity-js).
 
 Have feedback? Let us know on [Twitter](https://twitter.com/SerenityJS) or [LinkedIn](https://www.linkedin.com/company/serenity-js/).
 
-If you have questions about Serenity/JS or would simply like to say "hi" to fellow Serenity/JS developers, join our [Serenity/JS Community Chat on Gitter](https://gitter.im/serenity-js/Lobby)
+If you have found a typo on this website, feel free to fix it using the "Edit this page" link you'll find at the bottom of each page.
+
+If you have questions about Serenity/JS or would simply like to say "hi" to fellow Serenity/JS developers, join our [Serenity/JS Community Chat on Gitter](https://gitter.im/serenity-js/Lobby).
+
+New tutorials and videos are coming soon, follow us on [LinkedIn](https://www.linkedin.com/company/serenity-js) and subscribe to [Serenity/JS YouTube channel](https://www.youtube.com/channel/UC0RdeVPyjtJopVHvlLrXd1Q) to get notified when they're available!
+
+[![LinkedIn Follow](https://img.shields.io/badge/Follow%20Serenity%2FJS-0077B5?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/company/serenity-js)
+[![YouTube Follow](https://img.shields.io/badge/Watch%20@serenity--js-FA120F?style=for-the-badge&logo=youtube&logoColor=white)](https://www.youtube.com/@serenity-js)
+[![GitHub Sponsors](https://img.shields.io/badge/Support%20@serenity%2FJS-703EC8?style=for-the-badge&logo=github&logoColor=white)](https://github.com/sponsors/serenity-js)
 
 :::info Help us help you
 
@@ -82,5 +90,5 @@ Serenity/JS is a free open-source framework, so we rely on our [wonderful GitHub
 
 If Serenity/JS has made your life a bit easier and you'd like us to keep the new features, examples, documentation, and videos coming - please support our work on GitHub 🙇
 
-<iframe src="https://ghbtns.com/github-btn.html?user=serenity-js&type=sponsor&size=large" frameborder="0" scrolling="0" width="220" height="30" title="GitHub"></iframe>
+[![GitHub Sponsors](https://img.shields.io/badge/Support%20@serenity%2FJS-703EC8?style=for-the-badge&logo=github&logoColor=white)](https://github.com/sponsors/serenity-js)
 :::
