--- a/documentation/serenity-js.org/docs/index.mdx
+++ b/documentation/serenity-js.org/docs/index.mdx
@@ -5,27 +5,29 @@ sidebar_position: 1
 # Introducing Serenity/JS
 
 **Serenity/JS** is a free and open-source **acceptance testing framework** that can help you establish a **clear link** between
-the **business functionality** expected of your software system and its **actual working state**.
-A link that's necessary to build a **shared understanding** and **trust** between your business sponsors and delivery teams,
-and **prove** that your system **meets** and **continues to meet** its **requirements**.
+the **expected business functionality** and the **actual working state** of your software system.
 
-To help you achieve that, Serenity/JS enables you to:
+I've designed Serenity/JS to make it easier for you to **create test scenarios** that build a **shared understanding** and **trust** between your business sponsors and delivery teams
+and to help you **prove** that your system **meets** and **continues to meet** its **requirements**.
+
+To help you achieve all that, Serenity/JS enables you to:
 - Follow the [**Serenity/JS Screenplay Pattern**](/handbook/design/screenplay-pattern) to define your own **domain-specific test language**
   that everyone on your team can read, understand, and reason about - including your business sponsors and domain experts.
 - Create **single- and multi-actor test scenarios** that interact with [**any interface of your system**](/handbook/design/modular-architecture),
-  so that you're not limited to end-to-end testing.
+  including web UIs, REST APIs, mobile apps, and pretty much anything a Node.js program can integrate with.
 - Turn your test automation code into **test automation libraries** that are easy to [**share across projects and teams**](/handbook/design/reusable-test-code),
-  so that your whole company can benefit from your automation work and avoid code duplication and wasted effort.
-- Support **Continuous Integration**, **Testing**, and **Delivery**, so that your automated tests are as easy to ru on your machine as they are as part of your [CI/CD pipelines](/handbook/integration/).
+  so your whole company can benefit from your automation work and avoid code duplication and wasted effort.
+- Support **Continuous Integration**, **Testing**, and **Delivery**, so that your automated tests are as easy to run on your machine as they are as part of your [CI/CD pipelines](/handbook/integration/).
 - **Abstract away** the low-level implementation details and **use the same consistent API** to [**develop portable web tests**](/handbook/web-testing/) that work just as well with **remote Selenium grids** as with local **Playwright** or **Puppeteer** installations.
-- Introduce [**world-class reporting and living documentation**](/handbook/reporting/) to demonstrate not only what tests are executed,
-  but more importantly - what **business requirements** are verified and what **business features** and **workflows** are working as expected.
+- Introduce [**world-class reporting and living documentation**](/handbook/reporting/) to demonstrate not only what tests are executed
+  but, more importantly - what **business requirements** are verified and what **business features** and **workflows** are working as expected.
 
-In summary, Serenity/JS can help you and your team create **high-quality**, **reliable automated acceptance tests** that are a pleasure to work with,
-and the **modular and extensible architecture** of the framework will let you use as much or as little of it as you wish.
-You can even introduce the new ideas and patterns brought by Serenity/JS **gradually** to an **existing codebase**.
+In summary, **Serenity/JS** can help you and your team create **high-quality**, **reliable automated acceptance tests** that are a pleasure to work with.
+The **modular** and **extensible architecture** of the framework will let you use as much or as little of it as you wish, take advantage of your
+**existing automation tools and processes**, and introduce the **new ideas** and **patterns** brought by Serenity/JS **gradually** even to an **existing codebase**.
 
-This handbook will help you get started.
+This handbook will help you get started with Serenity/JS and offers plenty of **practical examples**, **exercises**, and **reference implementations** you can explore
+to become successful with test automation.
 
 Enjoy Serenity!
 
